<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:padding="10dp"
        android:background="@drawable/cirle_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/teal_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/quang_l_m"/>

    <TextView
        android:padding="10dp"
        android:textSize="15sp"
        android:textColor="@color/teal_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/quanglam"/>

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/_10000"/>

        <TextView
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/following"/>

        <TextView
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/_1000"/>

        <TextView
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/followings"/>

    </LinearLayout>

    <View
        android:background="#E6E6E6"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>